Modified .gitignore for eclipse files

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 .project
 .settings
 *.launch
+eclipse
+/eclipse/.metadata/.plugins/!org.eclipse.core.resources
+/eclipse/.metadata/.plugins/!org.eclipse.core.runtime
+/eclipse/.metadata/.plugins/!org.eclipse.debug.core
+/eclipse/.metadata/.plugins/!org.eclipse.debug.ui
+
 
 # IntelliJ IDEA
 *.iml
